// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check reading and app-deleting the message 1`] = `
Array [
  Object {
    "content": "memberMessage",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "deletedBy": Array [
      Object {
        "id": "dbId:MessageDeletedByUserRepository:1",
        "sphereId": "dbId:SphereRepository:1",
        "updatedAt": "1970-01-01T00:00:00.000Z",
        "userId": "dbId:UserRepository:2",
      },
    ],
    "everyoneInSphere": false,
    "id": "dbId:MessageV2Repository:1",
    "includeSenderInEveryone": false,
    "ownerId": "dbId:UserRepository:1",
    "readBy": Array [
      Object {
        "id": "dbId:MessageReadByUserRepository:1",
        "sphereId": "dbId:SphereRepository:1",
        "updatedAt": "1970-01-01T00:00:00.000Z",
        "userId": "dbId:UserRepository:2",
      },
    ],
    "recipients": Array [
      Object {
        "userId": "dbId:UserRepository:2",
      },
    ],
    "sphereId": "dbId:SphereRepository:1",
    "triggerEvent": "enter",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
]
`;

exports[`Create and get messages by the sender 1`] = `
Array [
  Object {
    "content": "adminMessage",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "everyoneInSphere": true,
    "everyoneInSphereIncludingOwner": true,
    "id": "dbId:MessageV2Repository:1",
    "ownerId": "dbId:UserRepository:1",
    "recipients": Array [
      Object {
        "id": "dbId:UserRepository:2",
      },
      Object {
        "id": "dbId:UserRepository:3",
      },
    ],
    "sphereId": "dbId:SphereRepository:1",
    "triggerEvent": "enter",
    "updatedAt": "1970-01-01T00:00:00.000Z",
  },
]
`;
